Fix typo in navigation link from "Cafes Selection" to "Chef's Selection"

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -36,7 +36,7 @@
                 <a class="nav-link" href="/pages/about.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="../index.html#chefs-slection">Cafes Selection</a>
+                <a class="nav-link " href="../index.html#chefs-slection">Chef's Selection</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link " href="/pages/menu.html">Our Menu</a>
