--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <a class="nav-link" href="/pages/about.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="#chefs-slection">Cafes Selection</a>
+                <a class="nav-link " href="#chefs-slection">Chef's Selection</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link " href="/pages/menu.html">Our Menu</a>
